--- a/src/pages/en/blog/[slug].astro
+++ b/src/pages/en/blog/[slug].astro
@@ -18,7 +18,7 @@ const title = post.title;
 <SiteLayout
   lang="en"
   title={`${title} – Personal Shopper`}
-  description={post.description || "Blog post"}
+  description={post.description || ''}
 >
   <ArticleBlock
     title={title}
