--- a/src/components/ui/collapsible/collapsible-trigger.astro
+++ b/src/components/ui/collapsible/collapsible-trigger.astro
@@ -1,6 +1,6 @@
 ---
 import type { HTMLAttributes } from "astro/types"
-import ChevronDownIcon from "lucide-static/icons/chevron-down.svg"
+import { Icon } from "@/components/ui/icon"
 
 import { cn } from "@/lib/utils"
 
@@ -26,7 +26,7 @@ const slot = await Astro.slots.render("default")
     >
       <Fragment set:html={slot} />
       {showChevron && (
-        <ChevronDownIcon class="ml-auto size-4 shrink-0 transition-transform duration-200 group-open/collapsible:rotate-180" />
+        <Icon name="chevron-down" class="ml-auto size-4 shrink-0 transition-transform duration-200 group-open/collapsible:rotate-180" />
       )}
     </summary>
   )
