--- a/src/components/ui/native-select/native-select.astro
+++ b/src/components/ui/native-select/native-select.astro
@@ -1,6 +1,6 @@
 ---
 import type { HTMLAttributes } from "astro/types"
-import ChevronDownIcon from "lucide-static/icons/chevron-down.svg"
+import { Icon } from "@/components/ui/icon"
 
 import { cn } from "@/lib/utils"
 
@@ -25,10 +25,10 @@ const { class: className, ...props } = Astro.props
   >
     <slot />
   </select>
-  <ChevronDownIcon
+  <Icon
+    name="chevron-down"
     class="text-muted-foreground pointer-events-none absolute top-1/2 right-3.5 size-4 -translate-y-1/2 opacity-50 select-none"
     aria-hidden="true"
     data-slot="native-select-icon"
   />
 </div>
-
