--- a/src/components/ui/sheet/sheet-close.astro
+++ b/src/components/ui/sheet/sheet-close.astro
@@ -1,6 +1,6 @@
 ---
 import type { ComponentProps } from "astro/types"
-import X from "lucide-static/icons/x.svg"
+import { Icon } from "@/components/ui/icon"
 
 import { cn } from "@/lib/utils"
 import { Button } from "@/components/ui/button"
@@ -17,5 +17,5 @@ const { class: className, ...props } = Astro.props
   data-slot="sheet-close"
   {...props}
 >
-  <X />
+  <Icon name="x" />
 </Button>
