--- a/src/pages/fr/blog/[slug].astro
+++ b/src/pages/fr/blog/[slug].astro
@@ -26,3 +26,4 @@ const title = post.title;
     <div class="prose prose-neutral max-w-none" set:html={renderMarkdown(post.body)} />
   </ArticleBlock>
 </SiteLayout>
+export const prerender = true;
